--- a/_config.yml
+++ b/_config.yml
@@ -18,19 +18,18 @@
 # You can create any custom variable you would like, and they will be accessible
 # in the templates via {{ site.myvariable }}.
 
-title: Your awesome title
-email: your-email@example.com
+title: Sam Wessley
+email: samwessley@gmail.com
 description: >- # this means to ignore newlines until "baseurl:"
-  Write an awesome description for your new site here. You can edit this
-  line in _config.yml. It will appear in your document head meta (for
-  Google search results) and in your feed.xml site description.
+  Welcome to my site. I'll post projects I made here, blog posts and essays, etc.
 baseurl: "/test-blog" # the subpath of your site, e.g. /blog
 url: "https://samwessley.github.io" # the base hostname & protocol for your site, e.g. http://example.com
-twitter_username: jekyllrb
-github_username:  jekyll
+twitter_username: samwessley
+github_username:  samwessley
 
 # Build settings
-theme: minima
+# Removed minima theme to create a regular theme
+# theme: minima
 plugins:
   - jekyll-feed
 
