--- a/_config.yml
+++ b/_config.yml
@@ -18,10 +18,9 @@
 # You can create any custom variable you would like, and they will be accessible
 # in the templates via {{ site.myvariable }}.
 
-title: sam wessley
+title: Sam Wessley
 email: samwessley@gmail.com
-description: >- # this means to ignore newlines until "baseurl:"
-  Welcome to my site. I'll post projects I made here, blog posts and essays, etc.
+description: ""
 baseurl: "/test-blog" # the subpath of your site, e.g. /blog
 url: "https://samwessley.github.io" # the base hostname & protocol for your site, e.g. http://example.com
 github_username:  samwessley
