update baseurl in config.yml

--- a/_config.yml
+++ b/_config.yml
@@ -21,7 +21,7 @@
 title: Sam Wessley
 email: samwessley@gmail.com
 description: ""
-baseurl: "/test-blog" # the subpath of your site, e.g. /blog
+baseurl: "" # the subpath of your site, e.g. /blog
 url: "https://samwessley.github.io" # the base hostname & protocol for your site, e.g. http://example.com
 github_username:  samwessley
 
