--- a/_config.yml
+++ b/_config.yml
@@ -36,6 +36,9 @@ permalink: /blog/:year/:month/:day/:title/
 plugins:
   - jekyll-feed
 
+# Google Analytics
+google_analytics: G-8PDCH95WZT
+
 # Exclude from processing.
 # The following items will not be processed, by default.
 # Any item listed under the `exclude:` key here will be automatically added to
